# BottyMcBotFace

./: CMakeLists.txt  LICENSE  readme.rst
cmake/: systemfuncs.cmake
documents/: LICENSE
include/: Discord.h  Exceptions.h  HTTPParser.h  Log.h  ManagedBuffer.h  Socket.h  SocketMultiplexer.h  ThreadEngine.h  TimerReactor.h  WebSocket.h  deleteme.h  kstring.h
src/: HTTPParser.cpp  Log.cpp  Main.cpp  ManagedBuffer.cpp  Multiplexer_EPoll.cpp  Socket.cpp  SocketMultiplexer.cpp  ThreadEngine.cpp  TimerReactor.cpp  WebSocket.cpp  kstring.cpp
tests/: CMakeLists.txt  kstring.cpp
